welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:18: error: ';' expected but 'else' found.
}} else fini=true  
   ^